[package]
name = "genstab_r"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tst_read_pickle"
path = "src/tst_read_pickle.rs"

[dependencies]
serde = "1.0.219"
serde-pickle = "1.2.0"
falglib = { path = "c:/users/mhycko/source/repos/mhcheops8b/falglib_r" }
#falglib = { git = "https://github.com/mhcheops8b/falglib_r.git" }
permlib = { path = "c:/users/mhycko/source/repos/mhcheops8b/permlib_r" }
# permlib = { git = "https://github.com/mhcheops8b/permlib_r.git" }